@@ -24,55 +24,55 @@ testLineNo()
   ### asserts
 
   ( ${_ASSERT_EQUALS_} 'x' 'y' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_EQUALS_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_NOT_EQUALS_} 'x' 'x' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_NOT_EQUALS_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_NULL_} 'x' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_NULL_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_NOT_NULL_} '' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_NOT_NULL_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_SAME_} 'x' 'y' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_SAME_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_NOT_SAME_} 'x' 'x' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_NOT_SAME_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_TRUE_} ${SHUNIT_FALSE} >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_TRUE_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_FALSE_} ${SHUNIT_TRUE} >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_FALSE_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_ASSERT_FALSE_} ${SHUNIT_TRUE} >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_ASSERT_FALSE_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
@@ -80,25 +80,25 @@ testLineNo()
   ### failures
 
   ( ${_FAIL_} >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_FAIL_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_FAIL_NOT_EQUALS_} 'x' 'y' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_FAIL_NOT_EQUALS_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_FAIL_SAME_} 'x' 'x' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_FAIL_SAME_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
 
   ( ${_FAIL_NOT_SAME_} 'x' 'y' >"${stdoutF}" 2>"${stderrF}" )
-  grep '^ASSERT:\[[0-9]*\] *' "${stderrF}" >/dev/null
+  grep '^ASSERT:\[[0-9]*\] *' "${stdoutF}" >/dev/null
   rtrn=$?
   assertTrue '_FAIL_NOT_SAME_ failure' ${rtrn}
   [ ${rtrn} -ne ${SHUNIT_TRUE} ] && cat ${stderrF} >&2
